--- a/index.html
+++ b/index.html
@@ -15,5 +15,45 @@
       perspiciatis sunt earum illum quia sed voluptate minus rem! Qui fuga aut
       aliquid porro culpa quod nemo totam quo magnam doloremque.
     </div>
+
+    <div class="example-3">
+      <img src="mountains.webp" alt="" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+        rerum accusantium, consectetur aperiam magnam molestias culpa repellat
+        sit hic reprehenderit quam accusamus maxime fugiat quas molestiae quod
+        distinctio, mollitia ullam.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+        rerum accusantium, consectetur aperiam magnam molestias culpa repellat
+        sit hic reprehenderit quam accusamus maxime fugiat quas molestiae quod
+        distinctio, mollitia ullam.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+        rerum accusantium, consectetur aperiam magnam molestias culpa repellat
+        sit hic reprehenderit quam accusamus maxime fugiat quas molestiae quod
+        distinctio, mollitia ullam.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque
+        inventore veritatis voluptatibus soluta dolorum aliquid nemo est quasi
+        tenetur doloremque voluptatum incidunt quis quaerat numquam cum, neque
+        ad repellendus odio!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque
+        inventore veritatis voluptatibus soluta dolorum aliquid nemo est quasi
+        tenetur doloremque voluptatum incidunt quis quaerat numquam cum, neque
+        ad repellendus odio!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque
+        inventore veritatis voluptatibus soluta dolorum aliquid nemo est quasi
+        tenetur doloremque voluptatum incidunt quis quaerat numquam cum, neque
+        ad repellendus odio!
+      </p>
+    </div>
   </body>
 </html>
